--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         <!-- 信息卡片 -->
         <div class="info-card">
             <h3>🏆 曼联球迷</h3>
-            <p>来自苏州中学园区校</p>
+            <p>来自SHSSIP</p>
             <p>热爱曼联，永不放弃！</p>
             <p>Glory Glory Man United! ⚽</p>
         </div>
@@ -513,7 +513,7 @@
 
         // 添加键盘交互
         document.addEventListener('keydown', (e) => {
-            if (e.code === 'Space') {
+            /*if (e.code === 'Space') {
                 e.preventDefault();
                 const football = document.querySelector('.football');
                 football.style.animation = 'none';
@@ -524,7 +524,7 @@
                     football.style.animation = 'footballSpin 1s linear infinite';
                 }, 2000);
             }
-        });
+        });*/
 
         // 滚动时隐藏提示
         window.addEventListener('scroll', () => {
