--- a/index.html
+++ b/index.html
@@ -1,540 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>曼联动画</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        body {
-            font-family: 'Microsoft YaHei', Arial, sans-serif;
-            background: linear-gradient(135deg, #1a1a1a 0%, #0a0a0a 100%);
-            min-height: 100vh;
-            overflow-x: hidden;
-        }
-
-        .container {
-            text-align: center;
-            position: relative;
-            padding: 2rem;
-        }
-
-        /* 标题样式 */
-        .title {
-            color: #DA020E;
-            font-size: 3rem;
-            font-weight: bold;
-            margin-bottom: 2rem;
-            text-transform: uppercase;
-            letter-spacing: 0.3em;
-            text-shadow: 0 0 20px rgba(218, 2, 14, 0.5);
-            animation: titlePulse 2s ease-in-out infinite;
-        }
-
-        @keyframes titlePulse {
-            0%, 100% { transform: scale(1); }
-            50% { transform: scale(1.05); }
-        }
-
-        /* 曼联队徽 */
-        .badge-container {
-            width: 350px;
-            height: 400px;
-            margin: 0 auto 3rem;
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .badge {
-            width: 300px;
-            height: 350px;
-            position: relative;
-            animation: badgeFloat 3s ease-in-out infinite;
-        }
-
-        @keyframes badgeFloat {
-            0%, 100% { transform: translateY(0) scale(1); }
-            50% { transform: translateY(-20px) scale(1.02); }
-        }
-
-        .badge-img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            filter: drop-shadow(0 10px 30px rgba(218, 2, 14, 0.5));
-            animation: badgeGlow 3s ease-in-out infinite;
-        }
-
-        @keyframes badgeGlow {
-            0%, 100% { filter: drop-shadow(0 10px 30px rgba(218, 2, 14, 0.5)); }
-            50% { filter: drop-shadow(0 10px 50px rgba(218, 2, 14, 0.8)); }
-        }
-
-        /* 足球动画 - 优化旋转流畅度 */
-        .football {
-            width: 120px;
-            height: 120px;
-            margin: 0 auto 3rem;
-            position: relative;
-            animation: footballSpin 1s linear infinite;
-            transform-style: preserve-3d;
-        }
-
-        .football-body {
-            width: 100%;
-            height: 100%;
-            background: radial-gradient(circle at 30% 30%, #ffffff 0%, #e0e0e0 100%);
-            border-radius: 50%;
-            position: relative;
-            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-            animation: footballBounce 0.5s ease-in-out infinite alternate;
-        }
-
-        .football-pentagon {
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            background: #000;
-            clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
-        }
-
-        .football-pentagon:nth-child(1) { top: 10px; left: 45px; }
-        .football-pentagon:nth-child(2) { top: 45px; left: 10px; }
-        .football-pentagon:nth-child(3) { top: 45px; left: 80px; }
-        .football-pentagon:nth-child(4) { bottom: 20px; left: 45px; }
-
-        @keyframes footballSpin {
-            from { transform: rotateY(0deg); }
-            to { transform: rotateY(360deg); }
-        }
-
-        @keyframes footballBounce {
-            from { transform: scale(0.98); }
-            to { transform: scale(1.02); }
-        }
-
-        /* 球场动画 */
-        .stadium {
-            width: 400px;
-            height: 200px;
-            margin: 0 auto 3rem;
-            position: relative;
-            background: linear-gradient(180deg, #2d5016 0%, #1a3009 100%);
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-        }
-
-        .stadium-lines {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border: 3px solid rgba(255, 255, 255, 0.5);
-        }
-
-        .center-circle {
-            position: absolute;
-            width: 80px;
-            height: 80px;
-            border: 3px solid rgba(255, 255, 255, 0.5);
-            border-radius: 50%;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .center-line {
-            position: absolute;
-            width: 3px;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.5);
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        /* 球员动画 - 优化移动效果 */
-        .player {
-            position: absolute;
-            width: 40px;
-            height: 60px;
-            z-index: 10;
-        }
-
-        .player-body {
-            width: 100%;
-            height: 100%;
-            background: #DA020E;
-            border-radius: 20px 20px 10px 10px;
-            position: relative;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-        }
-
-        .player-number {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
-
-        /* 球员1 - 左路移动 */
-        .player:nth-child(1) {
-            top: 60px;
-            left: 100px;
-            animation: playerMove1 3s ease-in-out infinite;
-        }
-
-        @keyframes playerMove1 {
-            0% { transform: translate(0, 0); }
-            25% { transform: translate(30px, -15px); }
-            50% { transform: translate(60px, 0); }
-            75% { transform: translate(30px, 15px); }
-            100% { transform: translate(0, 0); }
-        }
-
-        /* 球员2 - 中路移动 */
-        .player:nth-child(2) {
-            top: 100px;
-            left: 200px;
-            animation: playerMove2 2.5s ease-in-out infinite;
-        }
-
-        @keyframes playerMove2 {
-            0% { transform: translate(0, 0); }
-            33% { transform: translate(0, -20px); }
-            66% { transform: translate(0, 10px); }
-            100% { transform: translate(0, 0); }
-        }
-
-        /* 球员3 - 右路移动 */
-        .player:nth-child(3) {
-            top: 60px;
-            left: 300px;
-            animation: playerMove3 3.5s ease-in-out infinite;
-        }
-
-        @keyframes playerMove3 {
-            0% { transform: translate(0, 0); }
-            20% { transform: translate(-20px, -10px); }
-            40% { transform: translate(-40px, 0); }
-            60% { transform: translate(-20px, 10px); }
-            80% { transform: translate(0, 0); }
-            100% { transform: translate(0, 0); }
-        }
-
-        /* 粒子效果 */
-        .particles {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            overflow: hidden;
-            z-index: 1;
-        }
-
-        .particle {
-            position: absolute;
-            width: 10px;
-            height: 10px;
-            background: #DA020E;
-            border-radius: 50%;
-            opacity: 0.5;
-            animation: particleFloat 8s linear infinite;
-        }
-
-        @keyframes particleFloat {
-            0% {
-                transform: translateY(100vh) rotate(0deg);
-                opacity: 0;
-            }
-            10% {
-                opacity: 0.5;
-            }
-            90% {
-                opacity: 0.5;
-            }
-            100% {
-                transform: translateY(-100vh) rotate(720deg);
-                opacity: 0;
-            }
-        }
-
-        /* 信息卡片 */
-        .info-card {
-            background: rgba(255, 255, 255, 0.05);
-            border: 2px solid #DA020E;
-            border-radius: 15px;
-            padding: 2rem;
-            max-width: 500px;
-            margin: 0 auto;
-            backdrop-filter: blur(10px);
-            animation: cardFadeIn 1s ease-out;
-        }
-
-        @keyframes cardFadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .info-card h3 {
-            color: #FBE122;
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .info-card p {
-            color: #fff;
-            font-size: 1.1rem;
-            line-height: 1.8;
-            margin-bottom: 0.5rem;
-        }
-
-        /* 响应式设计 */
-        @media (max-width: 768px) {
-            .title {
-                font-size: 2rem;
-            }
-
-            .badge-container {
-                width: 250px;
-                height: 300px;
-            }
-
-            .badge {
-                width: 200px;
-                height: 250px;
-            }
-
-            .stadium {
-                width: 300px;
-            }
-
-            .info-card {
-                padding: 1.5rem;
-            }
-        }
-
-        /* 闪烁效果 */
-        .glow {
-            animation: glow 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes glow {
-            from {
-                text-shadow: 0 0 10px #DA020E, 0 0 20px #DA020E;
-            }
-            to {
-                text-shadow: 0 0 20px #DA020E, 0 0 40px #DA020E, 0 0 60px #DA020E;
-            }
-        }
-
-        /* 滚动提示 */
-        .scroll-hint {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: #DA020E;
-            font-size: 0.9rem;
-            animation: bounce 2s infinite;
-            z-index: 100;
-            pointer-events: none;
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% { transform: translateX(-50%) translateY(0); }
-            40% { transform: translateX(-50%) translateY(-10px); }
-            60% { transform: translateX(-50%) translateY(-5px); }
-        }
-    </style>
-</head>
-<body>
-    <!-- 粒子背景 -->
-    <div class="particles" id="particles"></div>
-
-    <!-- 滚动提示 -->
-    <div class="scroll-hint">↓ 向下滚动查看更多 ↓</div>
-
-    <div class="container">
-        <!-- 标题 -->
-        <h1 class="title glow">曼联 United</h1>
-
-        <!-- 曼联队徽 -->
-        <div class="badge-container">
-            <div class="badge">
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7a/Manchester_United_FC_crest.svg/1200px-Manchester_United_FC_crest.svg.png" 
-                     alt="Manchester United Badge" 
-                     class="badge-img">
-            </div>
-        </div>
-
-        <!-- 足球 -->
-        <div class="football">
-            <div class="football-body">
-                <div class="football-pentagon"></div>
-                <div class="football-pentagon"></div>
-                <div class="football-pentagon"></div>
-                <div class="football-pentagon"></div>
-            </div>
-        </div>
-
-        <!-- 球场 -->
-        <div class="stadium">
-            <div class="stadium-lines"></div>
-            <div class="center-circle"></div>
-            <div class="center-line"></div>
-            <div class="player">
-                <div class="player-body">
-                    <span class="player-number">7</span>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-body">
-                    <span class="player-number">10</span>
-                </div>
-            </div>
-            <div class="player">
-                <div class="player-body">
-                    <span class="player-number">8</span>
-                </div>
-            </div>
-        </div>
-
-        <!-- 信息卡片 -->
-        <div class="info-card">
-            <h3>🏆 曼联球迷</h3>
-            <p>来自SHSSIP</p>
-            <p>热爱曼联，永不放弃！</p>
-            <p>Glory Glory Man United! ⚽</p>
-        </div>
-    </div>
-
-    <script>
-        // 创建粒子效果
-        function createParticles() {
-            const particlesContainer = document.getElementById('particles');
-            const particleCount = 50;
-
-            for (let i = 0; i < particleCount; i++) {
-                const particle = document.createElement('div');
-                particle.className = 'particle';
-                particle.style.left = Math.random() * 100 + '%';
-                particle.style.animationDelay = Math.random() * 8 + 's';
-                particle.style.animationDuration = (Math.random() * 4 + 6) + 's';
-                particle.style.width = (Math.random() * 10 + 5) + 'px';
-                particle.style.height = particle.style.width;
-                particlesContainer.appendChild(particle);
-            }
-        }
-
-        // 页面加载时创建粒子
-        window.addEventListener('load', createParticles);
-
-        // 鼠标移动效果
-        document.addEventListener('mousemove', (e) => {
-            const badge = document.querySelector('.badge');
-            
-            const mouseX = e.clientX / window.innerWidth - 0.5;
-            const mouseY = e.clientY / window.innerHeight - 0.5;
-
-            if (badge) {
-                badge.style.transform = `translateY(${Math.sin(Date.now() / 1000) * 20}px) rotateY(${mouseX * 20}deg) rotateX(${-mouseY * 20}deg)`;
-            }
-        });
-
-        // 点击效果
-        document.addEventListener('click', (e) => {
-            createClickParticle(e.clientX, e.clientY);
-        });
-
-        function createClickParticle(x, y) {
-            for (let i = 0; i < 10; i++) {
-                const particle = document.createElement('div');
-                particle.style.position = 'fixed';
-                particle.style.left = x + 'px';
-                particle.style.top = y + 'px';
-                particle.style.width = '10px';
-                particle.style.height = '10px';
-                particle.style.background = '#DA020E';
-                particle.style.borderRadius = '50%';
-                particle.style.pointerEvents = 'none';
-                particle.style.zIndex = '9999';
-                document.body.appendChild(particle);
-
-                const angle = (Math.PI * 2 / 10) * i;
-                const velocity = 100;
-                const vx = Math.cos(angle) * velocity;
-                const vy = Math.sin(angle) * velocity;
-
-                let posX = x;
-                let posY = y;
-                let opacity = 1;
-
-                function animate() {
-                    posX += vx * 0.02;
-                    posY += vy * 0.02;
-                    opacity -= 0.02;
-
-                    particle.style.left = posX + 'px';
-                    particle.style.top = posY + 'px';
-                    particle.style.opacity = opacity;
-
-                    if (opacity > 0) {
-                        requestAnimationFrame(animate);
-                    } else {
-                        particle.remove();
-                    }
-                }
-
-                animate();
-            }
-        }
-
-        // 添加键盘交互
-        document.addEventListener('keydown', (e) => {
-            /*if (e.code === 'Space') {
-                e.preventDefault();
-                const football = document.querySelector('.football');
-                football.style.animation = 'none';
-                football.offsetHeight; // 触发重绘
-                football.style.animation = 'footballSpin 0.3s linear infinite';
-                
-                setTimeout(() => {
-                    football.style.animation = 'footballSpin 1s linear infinite';
-                }, 2000);
-            }
-        });*/
-
-        // 滚动时隐藏提示
-        window.addEventListener('scroll', () => {
-            const scrollHint = document.querySelector('.scroll-hint');
-            if (window.scrollY > 100) {
-                scrollHint.style.opacity = '0';
-            } else {
-                scrollHint.style.opacity = '1';
-            }
-        });
-    </script>
-</body>
-</html>
+Hello
